@@ -1,7 +1,9 @@
 
 version 0.x.y - dd-mmm-yyyy
+ . Demos: IntervalDemo using relative path for plist.info file
  . Misc: Removed sound support. Not part of cocos2d
  . Misc: Moved OpenGLSupport inside the cocos2d directory. cocos2d.h includes OpenGLSupport headers
+ . Particles: It was (mistakenly) using Z coordinate
 
 
 version 0.3.1 - 30-Jul-2008
